[tool.poetry]
name = "twitter-graph"
version = "1.0.0"
description = "Fetch and visualize the graph of your Twitter friends and followers."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
docopt = "^0.6.2"
pandas = "^1.4.2"
python-twitter = "^3.5"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
